--- a/css/layout.css
+++ b/css/layout.css
@@ -6,6 +6,6 @@
 }
     .container > .row{
         width: 1000px;
-        margin-left: calc( 50% - 500% );
+        margin-left: calc( 50% - 500px );
         background-color: yellow;
     }
