--- a/css/layout.css
+++ b/css/layout.css
@@ -2,8 +2,7 @@
 
 .container{
     width: 100%;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding: 80px 0;
 }
     .container > .row{
         width: 1000px;
@@ -12,18 +11,19 @@
 @media (max-width: 1100px) {
     .container > .row{
         width: 700px;
-        margin-left: calc( 50% - 350px );
+        margin: 0 calc( 50% - 350px );
     }
 }
 @media (max-width: 800px) {
     .container > .row{
         width: 500px;
-        margin-left: calc( 50% - 250px );
+        margin: 0 calc( 50% - 350px );
     }
 }
 @media (max-width: 600px) {
     .container > .row{
         width: calc( 100% - 40px );
+        margin-right: calc( 50% - 350px );
         margin-left: 200px;
     }
 }
