--- a/css/layout.css
+++ b/css/layout.css
@@ -1,29 +1,29 @@
-/* Slius is desktop y mobile */
-
-.container{
+/* stilius is desktop y mobile */
+.container {
     width: 100%;
     padding: 80px 0;
+    background-color: #fff;
 }
-    .container > .row{
+    .container > .row {
         width: 1000px;
-        margin-left: calc( 50% - 500px );
+        margin: 0 calc(50% - 500px);
     }
+
 @media (max-width: 1100px) {
-    .container > .row{
+    .container > .row {
         width: 700px;
-        margin: 0 calc( 50% - 350px );
+        margin: 0 calc(50% - 350px);
     }
 }
 @media (max-width: 800px) {
-    .container > .row{
+    .container > .row {
         width: 500px;
-        margin: 0 calc( 50% - 350px );
+        margin: 0 calc(50% - 250px);
     }
 }
 @media (max-width: 600px) {
-    .container > .row{
-        width: calc( 100% - 40px );
-        margin-right: calc( 50% - 350px );
-        margin-left: 200px;
+    .container > .row {
+        width: calc(100% - 40px);
+        margin: 0 20px;
     }
 }
