--- a/css/hero.css
+++ b/css/hero.css
@@ -33,6 +33,7 @@
     .hero .clock{
         width: 100%;
         margin: 80px 0;
+        color: #fff
     }
     .hero .form{
         width: 90%;
@@ -46,6 +47,6 @@
      width: 100%;
      margin: 0;
      padding: 0 20px;
+    }
 
-}
 }
