--- a/css/footer.css
+++ b/css/footer.css
@@ -8,8 +8,13 @@ footer > .row:nth-child(1){
     padding: 10px 0;
     border-bottom: 2px solid #fff;
 }
-    footer .social-link{
-
+    footer .fa {
+        width: 40px;
+        color: #fff;
+        font-size: 20px;
+        line-height: 40px;
+        text-align: center;
+        text-decoration: none;
     }
 
     footer > .row:nth-child(2){
