--- a/css/hero.css
+++ b/css/hero.css
@@ -13,10 +13,12 @@
         width: 600px;
         margin: 0 calc(50% - 300px);
     }
+
     .hero img {
         width: 40px;
         margin-bottom: 40px;
     }
+
     .hero h1{
         width: 100%;
         margin-bottom: 20px;
@@ -24,24 +26,43 @@
         text-transform: uppercase;
         line-height: 50px;
     }
+
     .hero p{
         width: 100%;
         font-size: 20px;
         line-height: 25px;
         color: #555;
     }
+
     .hero .clock{
         width: 100%;
         margin: 80px 0;
         color: #fff
     }
+        .hero .clock > .time {
+            width: 25%;
+            float: left;
+        }
+            .clock > .time > .value {
+                width: 100%;
+                font-size: 70px;
+                line-height: 70px;
+            }
+            .clock > .time > .label {
+                width: 100%;
+                font-size: 20px;
+                line-height: 20px;
+            }
+
     .hero .form{
         width: 90%;
         margin: 0 5% 20px;
     }
+
     .hero .mouse{
         
     }
+
 @media (max-width: 700px) {
     .hero > .row{
      width: 100%;
@@ -49,4 +70,13 @@
      padding: 0 20px;
     }
 
+}
+@media (max-width: 500px) {
+    .hero .clock > .time {
+        width: 50%;
+    }
+        .hero .clock > .time:nth-child(1),
+        .hero .clock > .time:nth-child(2) {
+            margin-bottom: 30px;
+        }
 }
