--- a/css/hero.css
+++ b/css/hero.css
@@ -7,7 +7,7 @@
     background-position: bottom center;
     background-attachment: fixed;
     text-align: center;
-    height: 100vh;
+    height: 90vh;
 }
     .hero > .row{
         width: 600px;
@@ -60,8 +60,37 @@
     }
 
     .hero .mouse{
-        
+        width: 120px;
+        height: 200px;
+        background-color: transparent;
+        border: 15px solid #fff;
+        border-radius: 80px;
     }
+        .hero .mouse > .wheel {
+            width: 20px;
+            height: 40px;
+            background-color: #fff;
+            margin-top: 30px;
+            border-radius: 5px;
+            animation: mouse 1.5s ease-out 0s infinite normal forwards;
+        }
+
+@keyframes mouse {
+    0% {
+        margin-top: 30px;
+        opacity: 1;
+        transform: rotate(0deg);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        margin-top: 120px;
+        opacity: 0;
+    }
+}
+
+    
 
 @media (max-width: 700px) {
     .hero > .row{
