--- a/css/hero.css
+++ b/css/hero.css
@@ -7,7 +7,7 @@
     background-position: bottom center;
     background-attachment: fixed;
     text-align: center;
-    height: 90vh;
+    height: 100vh;
 }
     .hero > .row{
         width: 600px;
@@ -58,6 +58,15 @@
         width: 90%;
         margin: 0 5% 20px;
     }
+        .hero .form > input{
+            background-color: transparent;
+            color: #fff;
+            border-bottom-color: #fff;
+            outline: none
+        }
+        .hero .form > input::placeholder{
+            color: #fff;
+        }
 
     .hero .mouse{
         width: 120px;
